src/tests/fixtures/arguments_positional/positionalArgNonNullableOptionalNoDefault.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class User {
  /** @gqlField */
  name: string = "John Doe";
  /** @gqlField */
  greeting(greeting?: string): string {
    return `${greeting}, ${this.name}!`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments_positional/positionalArgNonNullableOptionalNoDefault.invalid.ts:6:20 - error: Unexpected optional argument that does not also accept `null`. Optional arguments in GraphQL may get passed an explicit `null` value by the GraphQL executor. This means optional arguments must be typed to also accept `null`. Consider adding `| null` to the end of the argument type.

6   greeting(greeting?: string): string {
                     ~
